--- a/projects/Komal Agarwal_Random Meme Generator/index.html
+++ b/projects/Komal Agarwal_Random Meme Generator/index.html
@@ -21,7 +21,7 @@
             <p class="author">Made by : </p>
         </div>
         <div style="text-align: center;">
-        <button class="meme-share"><span><b>Liked it?</b></span> <span><b>Share it!</b></span></button>
+        <button class="meme-share"><span><b>Share it!</b></span> <span><b>Liked it?</b></span></button>
     </div>
     </div>
     <footer>
